--- a/angular/views/dashboard.html
+++ b/angular/views/dashboard.html
@@ -1,11 +1,11 @@
 <h1>Active Cameras</h1>
 
-<h3 ng-hide="cameras.length" class="no-cameras">We aren't tracking any cameras right now.</h3>
+<h3 ng-show="noCamera()" class="ng-show">We aren't tracking any cameras right now.</h3>
 
 <div ng-repeat="camera in cameras" class="jumbotron camera camera{{ camera.info.id }}">
   <h3>
     {{ camera.info.name }}
-    <a href="/camera/{{ camera.info.id }}">(see past images)</a>
+    <a href="#!/camera/{{ camera.id }}">(see past images)</a>
   </h3>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 img-parent">
