--- a/angular/scss/main.scss
+++ b/angular/scss/main.scss
@@ -56,3 +56,10 @@ h1 {
   margin-top: 40px;
   display: none;
 }
+
+.camera-feed {
+  display:  block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 480px;
+}
