camera editing done

--- a/angular/scss/main.scss
+++ b/angular/scss/main.scss
@@ -57,6 +57,11 @@ h1 {
   display: none;
 }
 
+.edit-camera {
+  margin-top: 40px;
+  display: none;
+}
+
 .camera-feed {
   display:  block;
   margin-left: auto;
