--- a/angular/views/camera_list.html
+++ b/angular/views/camera_list.html
@@ -8,7 +8,7 @@
       <table class="table table-striped table-hover ">
         <thead>
           <tr>
-            <th>id</th>
+            <th>ID</th>
             <th>Name</th>
             <th>Contact Number</th>
             <th>Twilio SID</th>
@@ -18,16 +18,17 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="camera in cameras" ng-class="{'text-success': cameraAdded.info.id === camera.info.id}">
-            <td>{{ camera.id }}</td>
+          <tr ng-repeat="camera in cameras" ng-class="{'text-success': cameraAdded.info.id === camera.info.id || editedCameraInfo.id === camera.info.id}">
+            <td>{{ camera.info.id }}</td>
             <td>{{ camera.info.name }}</td>
             <td>{{ camera.info.contact_number }}</td>
             <td>{{ camera.info.twilio_sim_sid }}</td>
             <td>{{ camera.info.token }}</td>
             <td>{{ camera.info.created_at }}</td>
             <td>
-                <a href="#!/cameras/{{ camera.info.id }}/edit" class="btn btn-xs btn-success">Edit</a>&nbsp;
-                <button ng-click="deleteCamera(camera.id)" class="btn btn-xs btn-danger">Delete</button>
+                <button ng-click="editCamera(camera.info.id)" class="btn btn-xs btn-success">Edit</button>
+                &nbsp;
+                <button ng-click="deleteCamera(camera.info.id)" class="btn btn-xs btn-danger">Delete</button>
             </td>
           </tr>
         </tbody>
@@ -38,7 +39,6 @@
 </div>
 
 <a class="btn btn-primary add-camera-show">Add New Camera</a>
-
 <div class="row add-camera">
   <div class="col-lg-6">
     <form class="form-horizontal" ng-submit="addCamera()">
@@ -81,6 +81,53 @@
         </div>
 
         <p class="text-warning" id="add-camera-failed"></p>
+      </fieldset>
+    </form>
+  </div>
+</div>
+
+<div class="row edit-camera">
+  <div class="col-lg-6">
+    <form class="form-horizontal" ng-submit="updateCamera()">
+      <fieldset>
+        <legend>Edit camera</legend>
+
+        <div class="form-group">
+          <label for="id" class="col-lg-2 control-label">Id</label>
+          <div class="col-lg-10">
+            <input type="text" class="form-control" ng-model="editedCameraInfo.id" id="id" value="{{ editedCameraInfo.id }}" placeholder="ID" disabled>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="name" class="col-lg-2 control-label">Name</label>
+          <div class="col-lg-10">
+            <input type="text" class="form-control" ng-model="editedCameraInfo.name" id="name" value="{{ editedCameraInfo.name }}" placeholder="Name">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="contact_number" class="col-lg-2 control-label">Contact Number</label>
+          <div class="col-lg-10">
+            <input type="text" class="form-control" ng-model="editedCameraInfo.contact_number" id="contact_number" value="{{ editedCameraInfo.contact_number }}" placeholder="4123620201">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="twilio_sim_sid" class="col-lg-2 control-label">Twilio SIM SID</label>
+          <div class="col-lg-10">
+            <input type="text" class="form-control" ng-model="editedCameraInfo.twilio_sim_sid" id="twilio_sim_sid" value="{{ editedCameraInfo.twilio_sim_sid }}" placeholder="Twilio SIM SID">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-lg-10 col-lg-offset-2">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="reset" class="btn btn-default edit-camera-cancel">Cancel</button>
+          </div>
+        </div>
+
+        <p class="text-warning" id="edit-camera-failed"></p>
       </fieldset>
     </form>
   </div>
