alert archives UI feature

--- a/angular/scss/main.scss
+++ b/angular/scss/main.scss
@@ -66,3 +66,15 @@ h1 {
   margin-right: auto;
   height: 480px;
 }
+
+.alerts-list {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.archive-view {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+}
