--- a/angular/scss/main.scss
+++ b/angular/scss/main.scss
@@ -13,12 +13,33 @@ $green: #00bc8c;
 $red: #e74c3c;
 $peach: #E78F3C;
 $orange: #f39c12;
-//
+$wireless: #7D60A9;
+$tred: #F22F46;
+$tblue: #0D122B;
+$chalk: #F5F5F5;
+$ash: #E8E8E8;
+$smoke: #94979B;
 
 body {
   @include font-feature-settings("kern", "liga", "pnum");
   -webkit-font-smoothing: antialiased;
   padding-top: 50px;
+  background-color: white;
+}
+
+a:link {
+  color: $tred;
+  text-decoration: none;
+  border-bottom: 1px solid $tblue;
+}
+
+a:hover {
+  color: white;
+  border-bottom-color: $tred;
+}
+
+select {
+  border: 1px solid $tblue;
 }
 
 h1 {
@@ -27,7 +48,7 @@ h1 {
 }
 
 .camera {
-  padding-top: 20px;
+  padding-top: 5px;
   padding-bottom: 20px;
   h3 {
     a {
@@ -48,6 +69,8 @@ h1 {
 
 .add-camera-show {
   margin-top: 40px;
+  background-color: $green;
+  border: none;
 }
 
 .add-camera {
@@ -55,26 +78,144 @@ h1 {
   display: none;
 }
 
+.btn-primary {
+  background-color: $green !important;
+}
+
 .edit-camera {
   margin-top: 40px;
   display: none;
+  color: $tblue;
 }
 
 .camera-feed {
-  display:  block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 480px;
+  display: flex;
+
+  .buffer {
+    margin: 20px 0 20px 0;
+  }
+}
+.camera-feed > div {
+  min-width: 0;
+}
+.camera-feed > img {
+  max-width: 100%;
+  height: auto;
 }
 
 .alerts-list {
+  color: $tblue;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  select {
+    display: inline;
+    height: auto;
+    width: auto;
+    border: 1px solid $tblue;
+  }
+  select:focus {
+    border: 1px solid $tblue;
+  }
+}
+
+.archive-view {
   margin-top: 20px;
   display: flex;
   align-items: center;
 }
 
-.archive-view {
-  margin-top: 40px;
-  display: flex;
-  align-items: center;
+.selectpicker {
+  color: black;
+}
+
+.navbar-custom {
+  background-color: $tred !important;
+  a {
+    color: white;
+    border-bottom: none;
+  }
+  :hover,
+  :link,
+  :focus {
+    color: $tblue;
+    background-color: $tred !important;
+  }
+}
+
+.chalk-background {
+  background-color: $chalk !important;
+  color: $tblue;
+  input,
+  p
+  {
+    width:100%;
+  }
+  a {
+    color: $tblue;
+    border-bottom: 1px solid $tblue;
+  }
+  a:hover {
+    border-bottom-color: $tred;
+    text-decoration: none;
+  }
+  a:focus {
+    text-decoration: none;
+  }
+  label {
+    margin-left: 5px;
+  }
+  p {
+    color: $smoke;
+    margin: 5px 0px 0px 5px;
+  }
+  .btn-primary,
+  .btn-default {
+    border: none;
+  }
+}
+
+h1,
+h2,
+h3 span {
+  color: $tblue !important;
+}
+
+.bs-component {
+  td,
+  th {
+    color: $tblue;
+  }
+}
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: $chalk;
+}
+
+.table-hover > tbody > tr:hover {
+  background-color: $ash;
+}
+
+.navigate-archive {
+  text-align: center;
+  color: $tblue;
+  a {
+    color: $tblue;
+    text-decoration: none;
+    border-bottom-color: 1px solid $tblue;
+  }
+  a:hover {
+    border-bottom-color: $tred;
+  }
+}
+
+.archive-notification {
+  color: $tblue;
+}
+
+@media only screen and (min-width : 1000px) {
+  .camera-feed {
+    margin: 0 auto;
+    max-width: 703px;
+  }
 }
