--- a/angular/views/dashboard.html
+++ b/angular/views/dashboard.html
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 img-parent">
       <div class="camera-feed">
-        <img ng-src="{{ camera.snapshot.img_url }}" imageloaded="onload(camera)"/>
+        <img ng-src="{{ camera.snapshot.img_url }}" ng-init="img_oninit(camera)" imageloaded="img_onloaded(camera)"/>
       </div>
     </div>
   </div>
